[package]
name = "causality"
version = "0.2.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Event Driven Architecture Traits"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/causality"
homepage = "https://crates.io/crates/causality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
simple-error = "0.2.3"